--- a/pages/about.html
+++ b/pages/about.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Food Ninja</title>
   <!-- materialize icons, css & js -->
-  <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
+  <link href="../css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" href="/css/styles.css" rel="stylesheet">
-  <script type="text/javascript" src="/js/materialize.min.js"></script>
+  <link href="../css/styles.css" rel="stylesheet">
+  <script src="../js/materialize.min.js"></script>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#ffe1c4">
 </head>
 <body class="grey lighten-4">
 
@@ -26,9 +28,9 @@
   <ul id="side-menu" class="sidenav side-menu">
     <li><a class="subheader">FOODNINJA</a></li>
     <li><a href="/" class="waves-effect">Home</a></li>
-    <li><a href="/pages/about.html" class="waves-effect">About</a></li>
+    <li><a href="about.html" class="waves-effect">About</a></li>
     <li><div class="divider"></div></li>
-    <li><a href="/pages/contact.html" class="waves-effect">
+    <li><a href="contact.html" class="waves-effect">
       <i class="material-icons">mail_outline</i>Contact</a>
     </li>
   </ul>
@@ -40,6 +42,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptatibus omnis, ea doloremque exercitationem id necessitatibus. Voluptatem officiis cupiditate commodi totam, hic laborum est ducimus amet iure, non dignissimos illo.</p>
   </div>
 
-  <script src="/js/ui.js"></script>
+  <script src="js/app.js"></script>
+  <script src="../js/ui.js"></script>
 </body>
 </html>
