--- a/index.html
+++ b/index.html
@@ -129,6 +129,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/ui.js"></script>
-    <script src="./js/async.js"></script>
+    <script src="js/async.js"></script>
   </body>
 </html>
